c2prj1_cards/grade.txt
Grading at Thu Dec 24 16:28:28 UTC 2020
Compiling cards.c
cards.c: In function ‘print_card’:
cards.c:61:10: error: ‘return’ with a value, in function returning void [-Werror]
   return 0;}
          ^
cards.c: In function ‘main’:
cards.c:96:3: error: too few arguments to function ‘print_card’
   print_card();
   ^
cards.c:58:6: note: declared here
 void print_card(card_t c) {
      ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
